tests/miniJava/neg/001516_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new Main int [ 0 ] ; } }
